Style : 컬러 팔레트 추가 및 기본 폰트 설정

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,1 +1,42 @@
 @import "tailwindcss";
+
+@theme {
+  /* font family */
+  --font-sans: "Pretendard", ui-sans-serif, system-ui, sans-serif;
+  --font-pretendard: "Pretendard", sans-serif;
+
+  /* 기본 컬러색상 */
+  --color-black: #000000;
+  --color-white: #ffffff;
+
+  /* 커스텀 컬러색상  */
+
+  /* 오렌지 색상 */
+  --color-orange-50: #fff7ed;
+  --color-orange-100: #ffedd5;
+  --color-orange-200: #fed7aa;
+  --color-orange-300: #fdba74;
+  --color-orange-400: #fb923c;
+  --color-orange-500: #f97316;
+  --color-orange-600: #ea580c;
+  --color-orange-700: #c2410c;
+  --color-orange-800: #9a3412;
+  --color-orange-900: #7c2d12;
+  --color-orange-950: #431407;
+
+  /* 그레이 색상 */
+  --color-gray-50: #f9fafb;
+  --color-gray-100: #f3f4f6;
+  --color-gray-200: #e5e7eb;
+  --color-gray-300: #d1d5db;
+  --color-gray-400: #9ca3af;
+  --color-gray-500: #6b7280;
+  --color-gray-600: #4b5563;
+  --color-gray-700: #374151;
+  --color-gray-800: #1f2937;
+  --color-gray-900: #111827;
+  --color-gray-950: #030712;
+
+  /* 빨강 색상 */
+  --color-red-600: #dc2626;
+}
